# chat-with-repo

./: README.md  chat_repo.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
